--- a/Todo/Todo/Storyboard/Todo.storyboard
+++ b/Todo/Todo/Storyboard/Todo.storyboard
@@ -5,7 +5,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,8 +17,8 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="k6c-r9-P97">
-                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <rect key="frame" x="0.0" y="98" width="414" height="715"/>
+                                <color key="backgroundColor" name="mainBackgroudColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="bZi-50-33C">
                                     <size key="itemSize" width="414" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -58,7 +57,7 @@
                         <color key="backgroundColor" name="mainBackgroudColor"/>
                         <constraints>
                             <constraint firstItem="ABa-K7-Tq4" firstAttribute="bottom" secondItem="k6c-r9-P97" secondAttribute="bottom" id="3r4-K0-vlr"/>
-                            <constraint firstItem="k6c-r9-P97" firstAttribute="top" secondItem="ABa-K7-Tq4" secondAttribute="top" id="7Xb-cd-zZd"/>
+                            <constraint firstItem="k6c-r9-P97" firstAttribute="top" secondItem="ABa-K7-Tq4" secondAttribute="top" constant="10" id="7Xb-cd-zZd"/>
                             <constraint firstItem="ABa-K7-Tq4" firstAttribute="bottom" secondItem="cyq-aL-wpK" secondAttribute="bottom" constant="50" id="GHL-kv-xCe"/>
                             <constraint firstItem="ABa-K7-Tq4" firstAttribute="trailing" secondItem="cyq-aL-wpK" secondAttribute="trailing" constant="30" id="KYd-Dr-k6k"/>
                             <constraint firstItem="ABa-K7-Tq4" firstAttribute="trailing" secondItem="k6c-r9-P97" secondAttribute="trailing" id="xXW-Hf-eON"/>
@@ -101,8 +100,5 @@
         <namedColor name="mainBackgroudColor">
             <color red="0.98000001907348633" green="0.98000001907348633" blue="0.98000001907348633" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
