--- a/Todo/Todo/ViewController/CreateTaskViewController/CreateTaskViewController.xib
+++ b/Todo/Todo/ViewController/CreateTaskViewController/CreateTaskViewController.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CreateTaskViewController" customModule="Todo" customModuleProvider="target">
             <connections>
-                <outlet property="textField" destination="cSV-64-db1" id="Hgr-MU-lkA"/>
+                <outlet property="titleTextField" destination="cSV-64-db1" id="ZSp-bt-E46"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -76,7 +76,7 @@
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qKv-9v-Yel">
                                     <rect key="frame" x="0.0" y="0.0" width="374" height="50"/>
                                     <subviews>
-                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="タイトルを入力してください" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" id="cSV-64-db1" userLabel="task name">
+                                        <textField opaque="NO" contentMode="scaleToFill" restorationIdentifier="CreateTaskViewController" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="タイトルを入力してください" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" id="cSV-64-db1" userLabel="task name">
                                             <rect key="frame" x="8" y="8" width="334" height="34"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -143,13 +143,13 @@
     </objects>
     <resources>
         <namedColor name="mainBackgroudColor">
-            <color red="0.98039215686274506" green="0.98039215686274506" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.98000001907348633" green="0.98000001907348633" blue="0.98000001907348633" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="mainThemeColor">
-            <color red="0.058823529411764705" green="0.75686274509803919" blue="0.76862745098039209" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.059000000357627869" green="0.75700002908706665" blue="0.76899999380111694" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="subBackgroundColor">
-            <color red="0.94901961089999998" green="0.94901973009999996" blue="0.94901961089999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+            <color red="0.94900000095367432" green="0.94900000095367432" blue="0.94900000095367432" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
     </resources>
 </document>
